Fixed to absolute positiong for nav toggle on mobile screens

--- a/src/styles/partials/nav.scss
+++ b/src/styles/partials/nav.scss
@@ -43,7 +43,7 @@
       display: inline-block;
       height: calc(2 * var(--base__size));
       margin: var(--base__size);
-      position: fixed;
+      position: absolute;
       right: 0;
       top: 0;
       vertical-align: middle;
